# ghui

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md  all_items.json  graphql.config.yml  hiearchy.json  hygiene.json  instructions.md  plan-sanitize-epic-inspection.md  ui-declutter-brief.md
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-installer.yml  copilot-setup-steps.yml  release.yml  rust.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/basher/: charter.md  history.md
.squad/agents/linus/: charter.md  history.md
.squad/agents/livingston/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/rusty/: charter.md  history.md
.squad/agents/scribe/: history.md
.squad/casting/: history.json  registry.json
.squad/decisions/contracts/: task6.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-19-phase2-review-batch.md  2026-05-19-wave-a-phase2-fixes.md
.squad/orchestration-log/: 2026-05-18T17-19-25-07-00-livingston-pr70.md  2026-05-18T17-19-25-07-00-livingston-pr71.md  2026-05-18T17-19-25-07-00-livingston-pr72.md  2026-05-18T17-19-25-07-00-livingston-pr73.md  2026-05-18T17-19-25-07-00-rusty-pr70.md  2026-05-18T17-19-25-07-00-rusty-pr71.md  2026-05-18T17-19-25-07-00-rusty-pr72.md  2026-05-18T17-19-25-07-00-rusty-pr73.md
app/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/bindings/: Data.ts  Issue.ts  IssueState.ts  IterationFieldValue.ts  ProjectItemId.ts  PullRequestState.ts  SingleSelectFieldValue.ts  WorkItemData.ts
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: actions.rs  auth.rs  data.rs  lib.rs  main.rs  pat.rs  tracked_to_subissue.rs  update.rs
app/src/components/: AddColumnButton.svelte  AddItemDialog.svelte  AppBarButton.svelte  AppBarSwitch.svelte  AssigneeColumnMenu.svelte  Auth.svelte  ChangesToolbarButton.svelte  DropdownMenu.svelte  EpicConflictsPanel.svelte  ExecutionTracker.svelte  ExecutionTrackerContext.svelte.ts  ExecutionTrackerContextMenu.svelte  FindDialog.svelte  ItemMiniIcon.svelte  IterationColumnMenu.svelte  JsonEditor.svelte  LogPanel.svelte  Modal.svelte  Pat.svelte  PendingChangesDialog.svelte  RecipeBar.svelte  RecipeBar.test.ts  RefreshButton.svelte  ReviewChangesPanel.svelte  SanitizeButton.svelte  SingleSelectColumnMenu.svelte  TableColumnMenu.svelte  TableCustomFieldColumnHeader.svelte  TableFieldSelect.svelte  TableIterationColumnHeader.svelte  TableSingleSelectColumnHeader.svelte  TreeTable.svelte  TreeTableContextMenu.svelte  WorkItemContextMenu.svelte  WorkItemExecutionTracker.svelte  WorkItemExtraDataEditor.svelte  WorkItemStatistics.svelte  WorkItemTree.svelte  addToProjectContext.test.ts  addToProjectContext.ts  (+7 more)
app/src/lib/: Flash.svelte.ts  ItemUpdater.ts  OnVirstVisible.ts  WorkItemContext.svelte.ts  data.ts  filterableFields.test.ts  filterableFields.ts  ghostRouting.ts  (+8 more)
docs/: .gen-prototype.ps1  .prototype-data.json  .prototype-template.html  pivoting-design.md  pivoting-implementation-plan.md  pivoting-prototype.html
docs/icon-mockups/: preview.html
ghui-app/: Cargo.toml
ghui-app/src/: lib.rs  logger.rs  nodes.rs  pat.rs  telemetry.rs  updater.rs
ghui-app/src/nodes/: recipe_builder.rs
ghui-util/: Cargo.toml
ghui-util/src/: add_items.rs  hygiene.rs  main.rs
github-graphql/: Cargo.toml
github-graphql/src/: client.rs  data.rs  lib.rs  pivot.rs
github-graphql/src/client/: graphql.rs  transport.rs
github-graphql/src/client/graphql/: add_sub_issue.graphql  add_sub_issue.rs  add_to_project.graphql  add_to_project.rs  check_project_scope.graphql  check_scopes.rs  clear_project_field_value.graphql  clear_project_field_value.rs  custom_fields_query.graphql  custom_fields_query.rs  get_all_items.rs  get_issue_types.graphql  get_issue_types.rs  get_items.graphql  get_items.rs  get_minimal_project_items.graphql  get_project_hierarchy.graphql  get_project_item_ids.graphql  get_project_item_ids.rs  get_resource_id_query.graphql  get_resource_id_query.rs  get_sub_tracked_issues.graphql  hygiene_query.graphql  hygiene_query.rs  minimal_project_items.rs  mutators.rs  paged_query.rs  project_hierarchy.rs  project_items.graphql  project_items.rs  set_issue_type.graphql  set_issue_type.rs  set_project_field_value.graphql  set_project_field_value.rs  set_project_iteration_field_value.graphql  set_project_single_select_field_value.graphql  viewer_info.graphql  viewer_info.rs
github-graphql/src/data/: changes.rs  custom_fields.rs  delay_load.rs  test_helpers.rs  tests.rs  work_item.rs  work_items.rs
github-graphql/src/data/tests/: apply_changes.rs  resolve.rs  sanitize.rs  save.rs  undo_redo.rs  update.rs
github-graphql/tests/fixtures/: recipes.json
mockups/: mockups.html
(+55 files in other folders)
