[package]
name = "ghui-app"
version = "0.1.0"
edition = "2024"

[dependencies]
github-graphql = { path = "../github-graphql" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
ts-rs = { version = "10.1.0", features = ["serde-compat", "format"] }
anyhow = "1.0.98"
dirs = "6.0.0"
tokio = { version = "1", features = ["full"] }

