[package]
name = "ghui-app"
version = "0.10.4"
edition = "2024"

[dependencies]
github-graphql = { path = "../github-graphql" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12.0.1", features = ["serde-compat", "format"] }
anyhow = "1.0.102"
dirs = "6.0.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
time = "0.3"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
