[package]
name = "ghui-util"
version = "0.10.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
github-graphql = { path = "../github-graphql" }
regex = "1.11.1"
serde = "1.0.219"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
anyhow = "1.0.102"
tokio-stream = "0.1.17"
env_logger = "0.11"

[lints]
workspace = true
