[package]
name = "github-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = {version="0.14.0"}
serde = "1.0.219"
serde_json = "*"
reqwest = { version = "0.12", features = ["json"] }
ts-rs = { version = "10.1.0", features = ["serde-compat", "format"] }

[build-dependencies]

[dev-dependencies]
insta = "1"
