[package]
name = "github-graphql"
version = "0.10.3"
edition = "2021"

[dependencies]
graphql_client = { version = "0.16.0" }
anyhow = "1.0"
serde = "1.0.219"
serde_json = "*"
ts-rs = { version = "12.0.1", features = ["serde-compat", "format"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
structdiff = { git = "https://github.com/damyanp/structdiff.git" }
log = "0.4"


[build-dependencies]

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
