[package]
name = "ghui"
version = "0.10.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ghui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
github-graphql = { path = "../../github-graphql" }
ghui-app = { path = "../../ghui-app" }
tauri-plugin-window-state = "2"
dirs = "6.0.0"
ts-rs = { version = "12.0.1", features = ["serde-compat", "format"] }
anyhow = "1.0.102"
thiserror = "2.0.12"
log = "0.4"

[lints]
workspace = true
